--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -5,7 +5,7 @@
     "button_border_radius": 26,
     "input_border_radius": 0,
     "text_color": "#1c1c1c",
-    "background": "#efefef",
+    "background": "#ffffff",
     "secondary_background": "#ffffff",
     "success_color": "#307a07",
     "error_color": "#cb2b2b",
