--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -15,9 +15,10 @@
     "footer_text_color": "#fff",
     "primary_button_background": "#1c1c1c",
     "primary_button_text_color": "#ffffff",
-    "modal_background": "#ffffff",
-    "modal_text_color": "#1c1c1c",
+    "modal_background": "#1c1c1c",
+    "modal_text_color": "#ffffff",
     "product_rating_color": "#1c1c1c",
+    "product_on_sale_accent": "#0500ff",
     "heading_font": "montserrat_n5",
     "heading_letter_spacing": 18,
     "text_font": "nunito_sans_n4",
