update content from theme

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -15,8 +15,8 @@
     "footer_text_color": "#fff",
     "primary_button_background": "#1c1c1c",
     "primary_button_text_color": "#ffffff",
-    "modal_background": "#1c1c1c",
-    "modal_text_color": "#ffffff",
+    "modal_background": "#efefef",
+    "modal_text_color": "#1c1c1c",
     "product_rating_color": "#1c1c1c",
     "product_on_sale_accent": "#0500ff",
     "heading_font": "montserrat_n5",
@@ -26,7 +26,7 @@
     "button_letter_spacing": 18,
     "show_image_zoom_on_hover": false,
     "round_color_swatches": true,
-    "color_swatch_config": "",
+    "color_swatch_config": "18k Gold:#f0c071",
     "show_quick_buy": false,
     "cart_icon": "shopping_bag",
     "cart_show_free_shipping_bar": false,
