update content from theme

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -72,6 +72,12 @@
         "disabled": false,
         "settings": {
         }
+      },
+      "16278478101612877664": {
+        "type": "shopify:\/\/apps\/pagefly-page-builder\/blocks\/app-embed\/83e179f7-59a0-4589-8c66-c0dddf959200",
+        "disabled": false,
+        "settings": {
+        }
       }
     }
   },
